--- a/src/sass/Abstract/_mixins.scss
+++ b/src/sass/Abstract/_mixins.scss
@@ -9,3 +9,10 @@
 
     @content;
 }
+
+@mixin pl-flex($justify-content: center, $align-items: center, $flex-direction: column) {
+    display: flex;
+    justify-content: $justify-content;
+    align-items: $align-items;
+    flex-direction: $flex-direction;
+}
