--- a/src/sass/Components/_slider.scss
+++ b/src/sass/Components/_slider.scss
@@ -3,9 +3,7 @@
 .swiper {
     width: 100%;
     height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include pl-flex(center, center, row);
     background: linear-gradient(
         40deg, 
         var(--clr-classic-300, hsl(0, 0%, 9%)) 20%, 
@@ -13,14 +11,13 @@
     );
 
     .swiper-wrapper {
-        height: 21rem;
+        height: 20rem;
 
         .swiper-slide {
-            width: 21rem;
-            height: 21rem;
-            color: hsl(0, 0%, 100%);
-            border-radius: .5rem;
             position: relative;
+            width: 20rem;
+            height: 20rem;
+            border-radius: .5rem;
             overflow: hidden; 
             box-shadow: 0px 0px 20px 1px hsl(0, 0%, 4%);
             -webkit-box-reflect: 
@@ -34,7 +31,7 @@
             );
 
             figure {
-                height: 21rem;
+                height: 20rem;
             }   
         }
 
@@ -52,12 +49,6 @@
             clip-path: circle(0 at 110% 50%);
             transition: all .5s ease-in-out;
 
-            h1 {
-                font-size: var(--fs-big-600);
-                text-transform: uppercase;
-                letter-spacing: .3em;
-            }
-
             h3 {
                 font-size: .8em;
                 letter-spacing: .1em;
@@ -71,3 +62,4 @@
         }
     }
 }
+
