--- a/src/sass/Components/_loading.scss
+++ b/src/sass/Components/_loading.scss
@@ -15,7 +15,7 @@
     h1 {
         font-size: clamp(1.40rem, 3vw, 2rem);
         color: var(--clr-primary-300, #fff);
-        background: linear-gradient(s
+        background: linear-gradient(
             40deg,
             hsl(44, 99%, 73%),
             hsl(26, 96%, 55%),
